--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3.8'
 
 services:
   app:
-    build: .
+    image: willmonteiro/gerenciador-tarefas:01
+    container_name: gerenciador-tarefas-app
     ports:
       - "3001:3000"
     depends_on:
       - db
     environment:
+      - NODE_ENV=production
       - DB_HOST=db
       - DB_PORT=5432
       - DB_NAME=tarefas_db
@@ -16,25 +18,57 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 256M
 
   db:
     image: postgres:15-alpine
+    container_name: gerenciador-tarefas-db
     environment:
       - POSTGRES_DB=tarefas_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres123
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
     ports:
       - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - app-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d tarefas_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
 
 volumes:
   postgres_data:
+    driver: local
 
 networks:
   app-network:
     driver: bridge
+    name: gerenciador-tarefas-network
