ajuste sonar porta 9000

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,28 +1,25 @@
-# Configuração do SonarQube para Gerenciador de Tarefas
-sonar.projectKey=gerenciador-tarefas
-sonar.projectName=Gerenciador de Tarefas
+# Identificação do projeto
+sonar.projectKey=meu-projeto
+sonar.projectName=Meu Projeto
 sonar.projectVersion=1.0
 
-# Informações do projeto
-sonar.sources=.
+# Diretório base do código fonte
+sonar.sources=src
+
+# Diretório com arquivos de testes (opcional)
+sonar.tests=tests
+
+# Linguagens que serão analisadas
+sonar.language=java  # ou js, ts, etc., dependendo do projeto
+
+# Ignora arquivos e pastas específicas (opcional)
+sonar.exclusions=**/node_modules/**,**/*.spec.js
+
+# URL do servidor SonarQube
+sonar.host.url=http://201.23.3.86:9000
+
+# Token de autenticação (gera no SonarQube > Meu Perfil > Tokens)
+sonar.token=SEU_TOKEN_GERADO_AQUI
+
+# Codificação dos arquivos fonte
 sonar.sourceEncoding=UTF-8
-
-# Exclusões - arquivos que não devem ser analisados
-sonar.exclusions=node_modules/**,**/node_modules/**,*.log,front-end/styles.css,docker-compose.yml,dockerfile,.git/**,**/.git/**
-
-# Configurações para JavaScript/Node.js
-sonar.javascript.file.suffixes=.js,.jsx
-sonar.typescript.file.suffixes=.ts,.tsx
-
-# Configurações para HTML/CSS
-sonar.html.file.suffixes=.html,.htm
-sonar.css.file.suffixes=.css
-
-# Configurações para SQL
-sonar.sql.file.suffixes=.sql
-
-# Configurações de cobertura (opcional)
-# sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-# Configurações de qualidade
-sonar.qualitygate.wait=true
