--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,25 +1,22 @@
 # Identificação do projeto
-sonar.projectKey=meu-projeto
-sonar.projectName=Meu Projeto
+sonar.projectKey=gerenciador-tarefas
+sonar.projectName=Gerenciador de Tarefas
 sonar.projectVersion=1.0
 
 # Diretório base do código fonte
-sonar.sources=src
+sonar.sources=.
 
-# Diretório com arquivos de testes (opcional)
-sonar.tests=tests
+# Linguagens (opcional, mas bom definir)
+sonar.language=js
 
-# Linguagens que serão analisadas
-sonar.language=java  # ou js, ts, etc., dependendo do projeto
+# Ignorar arquivos/pastas
+sonar.exclusions=**/node_modules/**,**/*.log,front-end/styles.css
 
-# Ignora arquivos e pastas específicas (opcional)
-sonar.exclusions=**/node_modules/**,**/*.spec.js
-
-# URL do servidor SonarQube
+# URL do SonarQube
 sonar.host.url=http://201.23.3.86:9000
 
-# Token de autenticação (gera no SonarQube > Meu Perfil > Tokens)
-sonar.token=SEU_TOKEN_GERADO_AQUI
+# Token de autenticação
+sonar.login=SEU_TOKEN_GERADO_AQUI
 
 # Codificação dos arquivos fonte
 sonar.sourceEncoding=UTF-8
